--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
+    "axios": "^1.6.3",
     "concurrently": "^8.2.2",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
